# extensor_coding

./: .gitignore  Cargo.toml  Readme.md
benches/: algorithm.rs  algorithm_u.rs  compare.rs  convergence.rs  matrix_vec.rs  utils.rs  wedge_product.rs
benches/output/: bench_k_rust.txt
compare/cpp/: Dockerfile  README.md  bench_k_cpp.txt  extensor.cpp  extensor.h  graph.cpp  graph.h  main.cpp  matrix.cpp  matrix.h
compare/cpp/extensor/: bitvec.cpp  bitvec.h
compare/cpp/matrix/: sparse_triples.cpp  sparse_triples.h
compare/golang/: README.md  algorithm.go  algorithm_test.go  bench_k_golang.txt  extensor_coding  extensor_test.go  go.mod  go.sum  main.go  matrix_test.go
compare/golang/algorithm/: algorithm.go
compare/golang/extensor/: bitvec.go
compare/golang/graph/: graph.go
compare/golang/matrix/: sparse_hash.go  sparse_triples.go
src/: bitvec.rs  extensor.rs  graph.rs  k3.graphml  lib.rs  main.rs  utils.rs
src/algorithm/: mod.rs
src/data/: .gitignore  K1280.g6  K160.g6  K320.g6  K40.g6  K640.g6  K80.g6  out.arenas-jazz  out.brunson_southern-women_southern-women  out.edit-sewikibooks  out.moreno_kangaroo_kangaroo  path10.g6  path100.g6  path4.g6  path6.g6
src/data/test_graphs/: path10.s6  path100.s6  path10_with_header.g6  path10_with_header.s6  path3.g6  tutte_graph.g6  tutte_mat.txt
src/extensor/: bitvec.rs  dense_hashmap.rs  mod.rs
src/matrix/: mod.rs  naive.rs  naive_parallel.rs  sparse_hash.rs  sparse_triples.rs
src/structure/: extensor.rs  graph.rs  matrix.rs  matrix_naive.rs  mod.rs
src/structures/: extensor.rs  graph.rs  matrix.rs  mod.rs
