[package]
name = "extensor_coding"
version = "0.1.0"
authors = ["tim hau <tim.hau@hotmail.de>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
bitvec = "0.21.1"
num-traits = "0.2.14"

[features]
default = ["extensor_dense_hashmap", "matrix_naive"]
extensor_dense_hashmap = []
extensor_bitvec = []
matrix_naive = []
matrix_naive_parallel = []
matrix_sparse_hash = []
matrix_sparse_triples = []

[profile.bench]
debug = true