[package]
name = "extensor_coding"
version = "0.1.0"
authors = ["tim hau <tim.hau@hotmail.de>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
num-traits = "0.2.14"
plotters = "^0.3.0"

[features]
default = ["extensor_bitvec", "matrix_sparse_triples"]
extensor_dense_hashmap = []
extensor_bitvec = []
matrix_naive = []
matrix_sparse_hash = []
matrix_sparse_triples = []

[profile.bench]
debug = true

#[[bench]]
#name = "wedge_product"
#harness = false

#[[bench]]
#name = "matrix_vec"
#harness = false

#[[bench]]
#name = "algorithm"
#harness = false

#[[bench]]
#name = "convergence"
#harness = false

[[bench]]
name = "compare"
harness = false
